// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.shared.backend.metadatadb;

import "google/protobuf/timestamp.proto";
import "protos/shared/backend/create_job_request.proto";
import "protos/shared/backend/job_key.proto";
import "protos/shared/backend/job_status.proto";
import "protos/shared/backend/request_info.proto";
import "protos/shared/backend/result_info.proto";

option java_outer_classname = "JobMetadataProto";
option java_package = "com.google.aggregate.protos.shared.backend.metadatadb";

// The metadata for a job request.
message JobMetadata {
  // Unique key to identify the job.
  google.aggregate.protos.shared.backend.JobKey job_key = 1;

  // The time the request was received.
  google.protobuf.Timestamp request_received_at = 2;

  // The time the request was updated.
  google.protobuf.Timestamp request_updated_at = 3;

  // Number of times the job has been attempted for processing.
  int32 num_attempts = 4;

  // Enum value to represent the current status of the job.
  google.aggregate.protos.shared.backend.JobStatus job_status = 5;

  // Server generated unique id to identify the job.
  string server_job_id = 6;

  // The body of the request that created the job.
  // DEPRECATED: use RequestInfo instead. Populated for backwards compatibility.
  google.aggregate.protos.shared.backend.CreateJobRequest create_job_request = 7 [deprecated = true];

  // The request info for the job. An optional field for backwards compatibility
  // but should always exist for requests made.
  google.aggregate.protos.shared.backend.RequestInfo request_info = 8;

  // The result information the worker generated when processing the job.
  // Optional since this is only set for jobs that have finished.
  google.aggregate.protos.shared.backend.ResultInfo result_info = 9;

  // Version attribute for optimistic locking (compare-and-swap updates). This
  // should never be updated or accessed by anything outside of the
  // JobMetadataDb implementation.
  int32 record_version = 10;

  // Expiration time for the record.
  int64 ttl = 11;

  // The time the worker starts to process the request.
  google.protobuf.Timestamp request_processing_started_at = 12;
}
